compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/traitImpl/traitPropertyOverriddenByFunctionInTrait.fir.kt
interface T {
    val x: Int
        get() = 1
}

<!CONFLICTING_JVM_DECLARATIONS!><!>interface C : T {
    <!ACCIDENTAL_OVERRIDE!>fun getX() = 1<!>
}
